# pathos

./: Cargo.toml  README.md  example.txt  syntax.pest
src/: analysis.rs  check.rs  generation.rs  interpreter.rs  main.rs  syntax.rs  tests.rs
src/snapshots/: pathos__generation__test__generates_assignment_ir.snap  pathos__generation__test__generates_declaration_ir.snap  pathos__generation__test__generates_if_else_ir.snap  pathos__generation__test__generates_if_else_reassignment_ir.snap  pathos__generation__test__generates_if_ir.snap  pathos__generation__test__generates_reassignment_ir.snap  pathos__generation__test__generates_sequential_if_else_ir.snap  pathos__generation__test__generates_sum_ir.snap  pathos__generation__test__generates_while.snap  pathos__syntax__test__complex_module.snap  pathos__syntax__test__paren_expression.snap  pathos__syntax__test__precedence.snap  pathos__syntax__test__simple_precedence.snap  pathos__syntax__test__subtraction_precedence.snap
src/tests/: check_tests.rs  generation.rs  mod.rs  name_tests.rs  type_tests.rs
src/tests/analysis/: name_tests.rs  type_tests.rs
src/tests/snapshots/: pathos__tests__generation__generates_assignment_ir.snap  pathos__tests__generation__generates_declaration_ir.snap  pathos__tests__generation__generates_if_else_ir.snap  pathos__tests__generation__generates_if_else_reassignment_ir.snap  pathos__tests__generation__generates_if_ir.snap  pathos__tests__generation__generates_reassignment_ir.snap  pathos__tests__generation__generates_sequential_if_else_ir.snap  pathos__tests__generation__generates_sum_ir.snap  (+1 more)
