[package]
name = "pathos"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_matches = "1.5.0"
pest = "2.8.0"
pest_derive = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
